# gerrit-api

./: .gitignore  Cargo.toml
examples/: simple.rs
src/: client.rs  documentation.rs  lib.rs
src/access/: list_access_rights.rs  mod.rs  types.rs
src/accounts/: types.rs
src/documentation/: mod.rs  search.rs  types.rs
src/groups/: types.rs
src/projects/: list_projects.rs  mod.rs  project.rs  submit_requirements.rs  types.rs
src/projects/dashboards/: create_dashboard.rs  delete_dashboard.rs  get_dashboard.rs  list_dashboards.rs  mod.rs  types.rs  update_dashboard.rs
src/projects/submit_requirements/: create_submit_requirement.rs  delete_submit_requirement.rs  get_submit_requirement.rs  list_submit_requirements.rs  mod.rs  types.rs  update_submit_requirement.rs
